test/integration/bad/numeric-literal/real-bad3.stan
transformed data {
    real x = 12._345;
}